fixed gradle prop file

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.web.fabric
-	archives_base_name = fabric-example-mod
+	archives_base_name = website-mod
 
 # Dependencies
 	fabric_version=0.55.1+1.19
