--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,17 @@ dependencies {
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
+	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 	// Use JUnit test framework
 	// https://mvnrepository.com/artifact/org.jasypt/jasypt
 	implementation group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
 	//for encrypting passwords
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 }
 
 processResources {
