--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -27,10 +28,10 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// Uncomment the following line to enable the deprecated Fabric API modules. 
+	// Uncomment the following line to enable the deprecated Fabric API modules.
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
-	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+	implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 	// Use JUnit test framework
@@ -39,7 +40,8 @@ dependencies {
 	//for encrypting passwords
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
-
+	// https://mvnrepository.com/artifact/org.json/json
+	implementation group: 'org.json', name: 'json', version: '20220320'
 }
 
 processResources {
