--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
 	// https://mvnrepository.com/artifact/org.json/json
 	implementation group: 'org.json', name: 'json', version: '20220320'
+	// https://mvnrepository.com/artifact/io.javalin/javalin
+	implementation group: 'io.javalin', name: 'javalin', version: '4.6.4'
 }
 
 processResources {
